updated index.html: translated to English

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="uk">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -30,16 +30,16 @@
           <ul class="site-nav">
             <li class="site-nav-item">
               <a href="./index.html" class="link current site-nav-link"
-                >Студія</a
+                >Studio</a
               >
             </li>
             <li class="site-nav-item">
               <a href="./portfolio.html" class="link site-nav-link"
-                >Портфоліо</a
+                >Portfolio</a
               >
             </li>
             <li class="site-nav-item">
-              <a href="" class="link site-nav-link">Контакти</a>
+              <a href="" class="link site-nav-link">Contacts</a>
             </li>
           </ul>
         </nav>
@@ -69,9 +69,9 @@
       <!-- hero screen -->
       <section class="hero">
         <div class="container">
-          <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+          <h1 class="hero-title">Effective solutions for your business</h1>
           <button data-modal-open class="button primary" type="button">
-            Замовити послугу
+            Order a service
           </button>
         </div>
       </section>
@@ -79,7 +79,7 @@
       <!-- benefits -->
       <section class="section benefits">
         <div class="container">
-          <h2 class="title visually-hidden">Особливості</h2>
+          <h2 class="title visually-hidden">Features</h2>
           <ul class="benefits-list">
             <li class="benefits-item">
               <div class="benefits-pic">
@@ -87,10 +87,10 @@
                   <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
-              <h3 class="benefits-title">Увага до деталей</h3>
+              <h3 class="benefits-title">Attention to detail</h3>
               <p class="content">
-                Ідейні міркування, і навіть початок повсякденної роботи з
-                формування позиції.
+                Conceptual ideas and even the beginning of everyday work to form
+                a position.
               </p>
             </li>
             <li class="benefits-item">
@@ -99,10 +99,10 @@
                   <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
-              <h3 class="benefits-title">Пунктуальність</h3>
+              <h3 class="benefits-title">Punctuality</h3>
               <p class="content">
-                Завдання організації, особливо рамки і місце навчання кадрів
-                тягне у себе.
+                The task of the organization, especially the framework and the
+                place of training, draws in.
               </p>
             </li>
             <li class="benefits-item">
@@ -111,9 +111,10 @@
                   <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
-              <h3 class="benefits-title">Планування</h3>
+              <h3 class="benefits-title">Planning</h3>
               <p class="content">
-                Так само консультація з широким активом значною мірою зумовлює.
+                Consultation with a wide range of stakeholders largely
+                determines it.
               </p>
             </li>
             <li class="benefits-item">
@@ -122,10 +123,10 @@
                   <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
-              <h3 class="benefits-title">Сучасні технології</h3>
+              <h3 class="benefits-title">Modern technologies</h3>
               <p class="content">
-                Значимість цих проблем настільки очевидна, що реалізація
-                планових завдань.
+                The significance of these issues is so obvious that the
+                implementation of planned tasks is necessary.
               </p>
             </li>
           </ul>
@@ -136,18 +137,18 @@
 
       <section class="section works">
         <div class="container">
-          <h2 class="title">Чим ми займаємося</h2>
+          <h2 class="title">What we do</h2>
           <ul class="works-list">
             <li>
               <div class="works-thumb">
                 <img
                   class="works-pic"
                   src="./images/img-1.jpg"
-                  alt="Десктопні додатки"
+                  alt="Desktop apps"
                   width="370"
                   height="294"
                 />
-                <p class="works-label">Десктопні додатки</p>
+                <p class="works-label">Desktop apps</p>
               </div>
             </li>
             <li>
@@ -155,11 +156,11 @@
                 <img
                   class="works-pic"
                   src="./images/img-2.jpg"
-                  alt="Мобільні додатки"
+                  alt="Mobile apps"
                   width="370"
                   height="294"
                 />
-                <p class="works-label">Мобільні додатки</p>
+                <p class="works-label">Mobile apps</p>
               </div>
             </li>
             <li>
@@ -167,11 +168,11 @@
                 <img
                   class="works-pic"
                   src="./images/img-3.jpg"
-                  alt="Дизайнерські рішення"
+                  alt="Design solutions"
                   width="370"
                   height="294"
                 />
-                <p class="works-label">Дизайнерські рішення</p>
+                <p class="works-label">Design solutions</p>
               </div>
             </li>
           </ul>
@@ -182,18 +183,18 @@
 
       <section class="section our-team">
         <div class="container">
-          <h2 class="title">Наша команда</h2>
+          <h2 class="title">Our Team</h2>
           <ul class="team-list">
             <li class="team-item">
               <img
                 class="team-pic"
                 src="./images/product-designer.jpg"
-                alt="Дизайнер продукту"
+                alt="Product Designer"
                 width="270"
                 height="260"
               />
               <div class="team-item-content">
-                <h3 class="subtitle">Ігор Дем'яненко</h3>
+                <h3 class="subtitle">Ihor Demyanenko</h3>
                 <p class="team-position" lang="en">Product Designer</p>
 
                 <ul class="socials-list">
@@ -246,12 +247,12 @@
               <img
                 class="team-pic"
                 src="./images/frontend-developer.jpg"
-                alt="Фронтенд розробник"
+                alt="Frontend Developer"
                 width="270"
                 height="260"
               />
               <div class="team-item-content">
-                <h3 class="subtitle">Ольга Рєпіна</h3>
+                <h3 class="subtitle">Olha Repina</h3>
                 <p class="team-position" lang="en">Frontend Developer</p>
                 <ul class="socials-list">
                   <li class="socials-item">
@@ -303,12 +304,12 @@
               <img
                 class="team-pic"
                 src="./images/marketing.jpg"
-                alt="Маркетолог"
+                alt="Marketing"
                 width="270"
                 height="260"
               />
               <div class="team-item-content">
-                <h3 class="subtitle">Микола Тарасов</h3>
+                <h3 class="subtitle">Mykola Tarasov</h3>
                 <p class="team-position" lang="en">Marketing</p>
                 <ul class="socials-list">
                   <li class="socials-item">
@@ -360,12 +361,12 @@
               <img
                 class="team-pic"
                 src="./images/ui-designer.jpg"
-                alt="UI Дизайнер"
+                alt="UI Designer"
                 width="270"
                 height="260"
               />
               <div class="team-item-content">
-                <h3 class="subtitle">Михайло Єрмаков</h3>
+                <h3 class="subtitle">Mykhailo Yermakov</h3>
                 <p class="team-position" lang="en">UI Designer</p>
                 <ul class="socials-list">
                   <li class="socials-item">
@@ -420,7 +421,7 @@
       <!-- clients -->
       <section class="clients section">
         <div class="container">
-          <h2 class="title">Постійні клієнти</h2>
+          <h2 class="title">Our Clients</h2>
           <ul class="clients-list">
             <li class="clients-item">
               <a
@@ -497,9 +498,9 @@
     <footer class="footer">
       <div class="container footer-container">
         <div class="footer-nav">
-          <a href="./index.html" lang="en" class="logo"
-            ><span class="accent">Web</span>Studio</a
-          >
+          <a href="./index.html" lang="en" class="logo">
+            <span class="accent">Web</span>Studio
+          </a>
           <address class="address">
             <!-- address list -->
             <ul class="address-list">
@@ -509,25 +510,26 @@
                   target="_blank"
                   rel="nofollow noreferrer noopener"
                   class="link address-map"
-                  >м. Київ, пр-т Лесі Українки, 26</a
                 >
+                  26 Lesya Ukrainka Blvd, Kyiv
+                </a>
               </li>
               <li class="address-item">
-                <a href="mailto:info@devstudio.com" class="link address-link"
-                  >info@devstudio.com</a
-                >
+                <a href="mailto:info@devstudio.com" class="link address-link">
+                  info@devstudio.com
+                </a>
               </li>
               <li class="address-item">
-                <a href="tel:+380961111111" class="link address-link"
-                  >+38 096 111 11 11</a
-                >
+                <a href="tel:+380961111111" class="link address-link">
+                  +38 096 111 11 11
+                </a>
               </li>
             </ul>
           </address>
         </div>
 
         <div class="follow-container">
-          <p class="follow-title">приєднуйтесь</p>
+          <p class="follow-title">Join Us</p>
           <ul class="footer-follow-list">
             <li class="follow-item">
               <a
@@ -581,7 +583,7 @@
         </div>
 
         <form class="subscribe-container">
-          <p class="subscribe-title">Підпишіться на розсилку</p>
+          <p class="subscribe-title">Subscribe to the newsletter</p>
           <div class="subscribe-input-container">
             <input
               type="email"
@@ -590,7 +592,7 @@
               placeholder="E-mail"
             />
             <button type="submit" class="button primary btn-subscribe">
-              Підписатися
+              Subscribe
               <svg class="subscribe-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-send"></use>
               </svg>
@@ -608,13 +610,13 @@
             <use href="./images/icons.svg#icon-close-black"></use>
           </svg>
         </button>
-        <p class="modal-title">Залиште свої дані, ми вам передзвонимо</p>
+        <p class="modal-title">Leave your details and we will call you back</p>
 
         <!-- modal-form -->
 
         <form class="modal-form">
           <div class="modal-field">
-            <label for="user-name" class="input-label">Ім'я</label>
+            <label for="user-name" class="input-label">Name</label>
             <div class="input-wrap">
               <input
                 autofocus
@@ -630,7 +632,7 @@
           </div>
 
           <div class="modal-field">
-            <label for="user-phone" class="input-label">Телефон</label>
+            <label for="user-phone" class="input-label">Phone</label>
             <div class="input-wrap">
               <input
                 type="tel"
@@ -645,7 +647,7 @@
           </div>
 
           <div class="modal-field">
-            <label for="user-email" class="input-label">Пошта</label>
+            <label for="user-email" class="input-label">Email</label>
             <div class="input-wrap">
               <input
                 type="email"
@@ -660,12 +662,12 @@
           </div>
 
           <div class="textarea-field">
-            <label for="user-text" class="input-label">Коментар</label>
+            <label for="user-text" class="input-label">Comment</label>
             <textarea
               name="user-text"
               id="user-text"
               class="input-comment"
-              placeholder="Введіть текст"
+              placeholder="Enter your text"
             ></textarea>
           </div>
 
@@ -678,20 +680,18 @@
               class="hidden modal-check"
               required
             />
-            <label for="privacy-policy" class="checkbox-label"
-              ><span class="checkbox">
+            <label for="privacy-policy" class="checkbox-label">
+              <span class="checkbox">
                 <svg class="checkbox-icon">
                   <use href="./images/icons.svg#icon-check"></use>
                 </svg>
               </span>
-              Погоджуюся з розсилкою та приймаю
-              <a href="" class="link agreement-link">Умови договору</a>
+              I agree to the newsletter and accept
+              <a href="" class="link agreement-link">Terms and conditions</a>
             </label>
           </div>
 
-          <button type="submit" class="button primary btn-submit">
-            Відправити
-          </button>
+          <button type="submit" class="button primary btn-submit">Send</button>
         </form>
       </div>
     </div>
