--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="uk">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -29,15 +29,15 @@
           >
           <ul class="site-nav">
             <li class="site-nav-item">
-              <a href="./index.html" class="link site-nav-link">Студія</a>
+              <a href="./index.html" class="link site-nav-link">Studio</a>
             </li>
             <li class="site-nav-item">
               <a href="./portfolio.html" class="link current site-nav-link"
-                >Портфоліо</a
+                >Portfolio</a
               >
             </li>
             <li class="site-nav-item">
-              <a href="" class="link site-nav-link">Контакти</a>
+              <a href="" class="link site-nav-link">Contacts</a>
             </li>
           </ul>
         </nav>
