updated portfolio page: translated to English

--- a/portfolio.html
+++ b/portfolio.html
@@ -66,31 +66,31 @@
     <main>
       <section class="portfolio">
         <div class="container">
-          <h1 class="visually-hidden">Портфоліо</h1>
+          <h1 class="visually-hidden">Portfolio</h1>
           <ul class="list button-list">
             <li>
               <button type="button" class="button portfolio-button accent">
-                Усі
+                All
               </button>
             </li>
             <li>
               <button type="button" class="button portfolio-button">
-                Веб-сайти
+                Websites
               </button>
             </li>
             <li>
               <button type="button" class="button portfolio-button">
-                Додатки
+                Apps
               </button>
             </li>
             <li>
               <button type="button" class="button portfolio-button">
-                Дизайн
+                Design
               </button>
             </li>
             <li>
               <button type="button" class="button portfolio-button">
-                Маркетинг
+                Marketing
               </button>
             </li>
           </ul>
@@ -102,22 +102,22 @@
                   <img
                     class="carts-pic"
                     src="./images/portfolio-1.jpg"
-                    alt="Ресторан"
+                    alt="TechnoQuack"
                     width="370"
                     height="294"
                   />
                   <div class="hover-overlay">
                     <p class="overlay-content">
-                      Ресурс пропонує комплексні пропозиції з різним рівнем
-                      функціоналу та сервісів. Все це дозволить відвідувачу
-                      отримати вичерпні відомості про компанію чи приватну
-                      особу.
+                      The resource offers comprehensive offers with different
+                      levels of functionality and services. All this will allow
+                      the user to get comprehensive information about the
+                      company or individual.
                     </p>
                   </div>
                 </div>
                 <div class="cards-content">
-                  <h2 class="portfolio-title">Ресторан Seafood</h2>
-                  <p class="portfolio-subtitle">Веб-сайт</p>
+                  <h2 class="portfolio-title">TechnoQuack</h2>
+                  <p class="portfolio-subtitle">Website</p>
                 </div>
               </a>
             </li>
@@ -127,22 +127,24 @@
                   <img
                     class="carts-pic"
                     src="./images/portfolio-2.jpg"
-                    alt="Ресторан"
+                    alt="Poster New Orlean vs Golden Star"
                     width="370"
                     height="294"
                   />
                   <div class="hover-overlay">
                     <p class="overlay-content">
-                      Ресурс пропонує комплексні пропозиції з різним рівнем
-                      функціоналу та сервісів. Все це дозволить відвідувачу
-                      отримати вичерпні відомості про компанію чи приватну
-                      особу.
+                      The resource offers comprehensive offers with different
+                      levels of functionality and services. All this will allow
+                      the user to get comprehensive information about the
+                      company or individual.
                     </p>
                   </div>
                 </div>
                 <div class="cards-content">
-                  <h2 class="portfolio-title">Ресторан Seafood</h2>
-                  <p class="portfolio-subtitle">Дизайн</p>
+                  <h2 class="portfolio-title">
+                    Poster New Orlean vs Golden Star
+                  </h2>
+                  <p class="portfolio-subtitle">Design</p>
                 </div>
               </a>
             </li>
@@ -152,22 +154,22 @@
                   <img
                     class="carts-pic"
                     src="./images/portfolio-3.jpg"
-                    alt="Ресторан"
+                    alt="Seafood Restaurant"
                     width="370"
                     height="294"
                   />
                   <div class="hover-overlay">
                     <p class="overlay-content">
-                      Ресурс пропонує комплексні пропозиції з різним рівнем
-                      функціоналу та сервісів. Все це дозволить відвідувачу
-                      отримати вичерпні відомості про компанію чи приватну
-                      особу.
+                      The resource offers comprehensive offers with different
+                      levels of functionality and services. All this will allow
+                      the user to get comprehensive information about the
+                      company or individual.
                     </p>
                   </div>
                 </div>
                 <div class="cards-content">
-                  <h2 class="portfolio-title">Ресторан Seafood</h2>
-                  <p class="portfolio-subtitle">Додаток</p>
+                  <h2 class="portfolio-title">Seafood Restaurant</h2>
+                  <p class="portfolio-subtitle">App</p>
                 </div>
               </a>
             </li>
@@ -177,22 +179,22 @@
                   <img
                     class="carts-pic"
                     src="./images/portfolio-4.jpg"
-                    alt="Ресторан"
+                    alt="Project Prime"
                     width="370"
                     height="294"
                   />
                   <div class="hover-overlay">
                     <p class="overlay-content">
-                      Ресурс пропонує комплексні пропозиції з різним рівнем
-                      функціоналу та сервісів. Все це дозволить відвідувачу
-                      отримати вичерпні відомості про компанію чи приватну
-                      особу.
+                      The resource offers comprehensive offers with different
+                      levels of functionality and services. All this will allow
+                      the user to get comprehensive information about the
+                      company or individual.
                     </p>
                   </div>
                 </div>
                 <div class="cards-content">
-                  <h2 class="portfolio-title">Ресторан Seafood</h2>
-                  <p class="portfolio-subtitle">Маркетинг</p>
+                  <h2 class="portfolio-title">Project Prime</h2>
+                  <p class="portfolio-subtitle">Marketing</p>
                 </div>
               </a>
             </li>
@@ -202,22 +204,22 @@
                   <img
                     class="carts-pic"
                     src="./images/portfolio-5.jpg"
-                    alt="Ресторан"
+                    alt="Project Boxes"
                     width="370"
                     height="294"
                   />
                   <div class="hover-overlay">
                     <p class="overlay-content">
-                      Ресурс пропонує комплексні пропозиції з різним рівнем
-                      функціоналу та сервісів. Все це дозволить відвідувачу
-                      отримати вичерпні відомості про компанію чи приватну
-                      особу.
+                      The resource offers comprehensive offers with different
+                      levels of functionality and services. All this will allow
+                      the user to get comprehensive information about the
+                      company or individual.
                     </p>
                   </div>
                 </div>
                 <div class="cards-content">
-                  <h2 class="portfolio-title">Ресторан Seafood</h2>
-                  <p class="portfolio-subtitle">Додаток</p>
+                  <h2 class="portfolio-title">Project Boxes</h2>
+                  <p class="portfolio-subtitle">App</p>
                 </div>
               </a>
             </li>
@@ -227,22 +229,22 @@
                   <img
                     class="carts-pic"
                     src="./images/portfolio-6.jpg"
-                    alt="Ресторан"
+                    alt="Inspiration has no Borders"
                     width="370"
                     height="294"
                   />
                   <div class="hover-overlay">
                     <p class="overlay-content">
-                      Ресурс пропонує комплексні пропозиції з різним рівнем
-                      функціоналу та сервісів. Все це дозволить відвідувачу
-                      отримати вичерпні відомості про компанію чи приватну
-                      особу.
+                      The resource offers comprehensive offers with different
+                      levels of functionality and services. All this will allow
+                      the user to get comprehensive information about the
+                      company or individual.
                     </p>
                   </div>
                 </div>
                 <div class="cards-content">
-                  <h2 class="portfolio-title">Ресторан Seafood</h2>
-                  <p class="portfolio-subtitle">Веб-сайт</p>
+                  <h2 class="portfolio-title">Inspiration has no Borders</h2>
+                  <p class="portfolio-subtitle">Website</p>
                 </div>
               </a>
             </li>
@@ -252,22 +254,22 @@
                   <img
                     class="carts-pic"
                     src="./images/portfolio-7.jpg"
-                    alt="Ресторан"
+                    alt="Limited Edition Publication"
                     width="370"
                     height="294"
                   />
                   <div class="hover-overlay">
                     <p class="overlay-content">
-                      Ресурс пропонує комплексні пропозиції з різним рівнем
-                      функціоналу та сервісів. Все це дозволить відвідувачу
-                      отримати вичерпні відомості про компанію чи приватну
-                      особу.
+                      The resource offers comprehensive offers with different
+                      levels of functionality and services. All this will allow
+                      the user to get comprehensive information about the
+                      company or individual.
                     </p>
                   </div>
                 </div>
                 <div class="cards-content">
-                  <h2 class="portfolio-title">Ресторан Seafood</h2>
-                  <p class="portfolio-subtitle">Дизайн</p>
+                  <h2 class="portfolio-title">Limited Edition Publication</h2>
+                  <p class="portfolio-subtitle">Design</p>
                 </div>
               </a>
             </li>
@@ -277,22 +279,22 @@
                   <img
                     class="carts-pic"
                     src="./images/portfolio-8.jpg"
-                    alt="Ресторан"
+                    alt="Project LAB"
                     width="370"
                     height="294"
                   />
                   <div class="hover-overlay">
                     <p class="overlay-content">
-                      Ресурс пропонує комплексні пропозиції з різним рівнем
-                      функціоналу та сервісів. Все це дозволить відвідувачу
-                      отримати вичерпні відомості про компанію чи приватну
-                      особу.
+                      The resource offers comprehensive offers with different
+                      levels of functionality and services. All this will allow
+                      the user to get comprehensive information about the
+                      company or individual.
                     </p>
                   </div>
                 </div>
                 <div class="cards-content">
-                  <h2 class="portfolio-title">Ресторан Seafood</h2>
-                  <p class="portfolio-subtitle">Маркетинг</p>
+                  <h2 class="portfolio-title">Project LAB</h2>
+                  <p class="portfolio-subtitle">Marketing</p>
                 </div>
               </a>
             </li>
@@ -302,22 +304,22 @@
                   <img
                     class="carts-pic"
                     src="./images/portfolio-9.jpg"
-                    alt="Ресторан"
+                    alt="Growing Business"
                     width="370"
                     height="294"
                   />
                   <div class="hover-overlay">
                     <p class="overlay-content">
-                      Ресурс пропонує комплексні пропозиції з різним рівнем
-                      функціоналу та сервісів. Все це дозволить відвідувачу
-                      отримати вичерпні відомості про компанію чи приватну
-                      особу.
+                      The resource offers comprehensive offers with different
+                      levels of functionality and services. All this will allow
+                      the user to get comprehensive information about the
+                      company or individual.
                     </p>
                   </div>
                 </div>
                 <div class="cards-content">
-                  <h2 class="portfolio-title">Ресторан Seafood</h2>
-                  <p class="portfolio-subtitle">Додаток</p>
+                  <h2 class="portfolio-title">Growing Business</h2>
+                  <p class="portfolio-subtitle">App</p>
                 </div>
               </a>
             </li>
@@ -330,9 +332,9 @@
     <footer class="footer">
       <div class="container footer-container">
         <div class="footer-nav">
-          <a href="./index.html" lang="en" class="logo"
-            ><span class="accent">Web</span>Studio</a
-          >
+          <a href="./index.html" lang="en" class="logo">
+            <span class="accent">Web</span>Studio
+          </a>
           <address class="address">
             <!-- address list -->
             <ul class="address-list">
@@ -342,25 +344,26 @@
                   target="_blank"
                   rel="nofollow noreferrer noopener"
                   class="link address-map"
-                  >м. Київ, пр-т Лесі Українки, 26</a
                 >
+                  26 Lesya Ukrainka Blvd, Kyiv
+                </a>
               </li>
               <li class="address-item">
-                <a href="mailto:info@devstudio.com" class="link address-link"
-                  >info@devstudio.com</a
-                >
+                <a href="mailto:info@devstudio.com" class="link address-link">
+                  info@devstudio.com
+                </a>
               </li>
               <li class="address-item">
-                <a href="tel:+380961111111" class="link address-link"
-                  >+38 096 111 11 11</a
-                >
+                <a href="tel:+380961111111" class="link address-link">
+                  +38 096 111 11 11
+                </a>
               </li>
             </ul>
           </address>
         </div>
 
         <div class="follow-container">
-          <p class="follow-title">приєднуйтесь</p>
+          <p class="follow-title">Join Us</p>
           <ul class="footer-follow-list">
             <li class="follow-item">
               <a
@@ -414,7 +417,7 @@
         </div>
 
         <form class="subscribe-container">
-          <p class="subscribe-title">Підпишіться на розсилку</p>
+          <p class="subscribe-title">Subscribe to the newsletter</p>
           <div class="subscribe-input-container">
             <input
               type="email"
@@ -423,7 +426,7 @@
               placeholder="E-mail"
             />
             <button type="submit" class="button primary btn-subscribe">
-              Підписатися
+              Subscribe
               <svg class="subscribe-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-send"></use>
               </svg>
